--- a/index.html
+++ b/index.html
@@ -13,8 +13,110 @@
 <body>
     <!-- corpo principale webapp -->
     <main>
-        <div class="container-user">
-            <div class="box-user">
+        <div id="container-user">
+            <div id="box-user">
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                </div>
                 <div class="user">
                     <img src="https://picsum.photos/300/200" alt="">
                 </div>
