barra dei controlli

--- a/index.html
+++ b/index.html
@@ -152,11 +152,73 @@
             </div>
             <!-- controlli centrali -->
             <div id="colcx">
-
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-user-plus"></i>
+                        <br>
+                        Invite
+                    </a>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-user-group"></i>
+                        <br>
+                        Manage Participants
+                    </a>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-chart-column"></i>
+                        <br>
+                        Polling
+                    </a>
+                </div>
+                <div class="controls share">
+                    <a href="#">
+                        <i class="fa-solid fa-share-from-square"></i>
+                        <br>
+                        Screen Share
+                    </a>
+                    <div>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </div>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-comment"></i>
+                        <br>
+                        chat
+                    </a>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-record-vinyl"></i>
+                        <br>
+                        Record
+                    </a>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-square"></i>
+                        <br>
+                        Breakout Rooms
+                    </a>
+                </div>
+                <div class="controls">
+                    <a href="#">
+                        <i class="fa-solid fa-ellipsis"></i>
+                        <br>
+                        More
+                    </a>
+                </div>
             </div>
             <!-- controlli sinistra -->
             <div id="coldx">
-
+                <div class="controls">
+                    <a href="#">
+                        End meeting
+                    </a>
+                </div>
             </div>
         </div>
     </main>
