--- a/index.html
+++ b/index.html
@@ -13,211 +13,223 @@
 <body>
     <!-- corpo principale webapp -->
     <main>
-        <div id="container-user">
-            <div id="box-user">
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
-                <div class="user">
-                    <img src="https://picsum.photos/300/200" alt="">
-                </div>
+        <div class="container">
+            <div id="controls-up">
+                <a href="#">
+                    <i class="fa-solid fa-table-cells"></i>
+                    Speaker View
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-maximize"></i>
+                </a>
             </div>
-        </div>
-        <!-- bottoni fondo pagina -->
-        <div id="buttons">
-            <!-- controlli sinistra -->
-            <div id="colsx">
-                <!-- audio -->
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-microphone"></i>
-                        <br>
-                        Mute
-                    </a>
-                    <div>
-                        <i class="fa-solid fa-angle-up"></i>
+            
+            <div id="container-user">
+                <div id="box-user">
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
                     </div>
-                </div>                
-                <!-- video -->
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-microphone"></i>
-                        <br>
-                        Mute
-                    </a>
-                    <div>
-                        <i class="fa-solid fa-angle-up"></i>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </div>
+                    <div class="user">
+                        <img src="https://picsum.photos/300/200" alt="">
                     </div>
                 </div>
-
             </div>
-            <!-- controlli centrali -->
-            <div id="colcx">
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-user-plus"></i>
-                        <br>
-                        Invite
-                    </a>
+            <!-- bottoni fondo pagina -->
+            <div id="buttons">
+                <!-- controlli sinistra -->
+                <div id="colsx">
+                    <!-- audio -->
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-microphone"></i>
+                            <br>
+                            Mute
+                        </a>
+                        <div>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                    </div>                
+                    <!-- video -->
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-microphone"></i>
+                            <br>
+                            Mute
+                        </a>
+                        <div>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                    </div>
+    
                 </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-user-group"></i>
-                        <br>
-                        Manage Participants
-                    </a>
-                </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-chart-column"></i>
-                        <br>
-                        Polling
-                    </a>
-                </div>
-                <div class="controls share">
-                    <a href="#">
-                        <i class="fa-solid fa-share-from-square"></i>
-                        <br>
-                        Screen Share
-                    </a>
-                    <div>
-                        <i class="fa-solid fa-angle-up"></i>
+                <!-- controlli centrali -->
+                <div id="colcx">
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-user-plus"></i>
+                            <br>
+                            Invite
+                        </a>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-user-group"></i>
+                            <br>
+                            Manage Participants
+                        </a>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-chart-column"></i>
+                            <br>
+                            Polling
+                        </a>
+                    </div>
+                    <div class="controls share">
+                        <a href="#">
+                            <i class="fa-solid fa-share-from-square"></i>
+                            <br>
+                            Screen Share
+                        </a>
+                        <div>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-comment"></i>
+                            <br>
+                            chat
+                        </a>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-record-vinyl"></i>
+                            <br>
+                            Record
+                        </a>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-square"></i>
+                            <br>
+                            Breakout Rooms
+                        </a>
+                    </div>
+                    <div class="controls">
+                        <a href="#">
+                            <i class="fa-solid fa-ellipsis"></i>
+                            <br>
+                            More
+                        </a>
                     </div>
                 </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-comment"></i>
-                        <br>
-                        chat
-                    </a>
-                </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-record-vinyl"></i>
-                        <br>
-                        Record
-                    </a>
-                </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-square"></i>
-                        <br>
-                        Breakout Rooms
-                    </a>
-                </div>
-                <div class="controls">
-                    <a href="#">
-                        <i class="fa-solid fa-ellipsis"></i>
-                        <br>
-                        More
-                    </a>
-                </div>
-            </div>
-            <!-- controlli sinistra -->
-            <div id="coldx">
-                <div class="controls">
-                    <a href="#">
-                        End meeting
-                    </a>
+                <!-- controlli sinistra -->
+                <div id="coldx">
+                    <div class="controls">
+                        <a href="#">
+                            End meeting
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
