--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -226,7 +226,7 @@
                 <!-- controlli sinistra -->
                 <div id="coldx">
                     <div class="controls">
-                        <a href="#">
+                        <a href="#" id="end">
                             End meeting
                         </a>
                     </div>
